PROJECT(radiomixer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_COLOR_MAKEFILE ON)

SET( QT_USE_QTXML TRUE )
SET( QT_USE_QT3SUPPORT TRUE )
SET( QT_USE_QTNETWORK TRUE )
SET( QT_MT_REQUIRED TRUE )
SET( QT_MIN_VERSION "4.4.0" )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

#add definitions, compiler switches, etc.
ADD_DEFINITIONS(-Wall -O2)
ADD_SUBDIRECTORY( src )

SET( RADIOMIXER_RCS
	radiomixer.qrc
)

QT4_ADD_RESOURCES( RADIOMIXER_RC_SRCS ${RADIOMIXER_RCS} )

INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
INSTALL( TARGETS ${PROGNAME} DESTINATION bin )
