PROJECT(radiomixer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_COLOR_MAKEFILE ON)

SET( QT_USE_QTXML TRUE )
SET( QT_USE_QTNETWORK TRUE )
SET( QT_MT_REQUIRED TRUE )
SET( QT_MIN_VERSION "4.6.0" )

FIND_PACKAGE( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE} )

## find required libs..
INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES(JACKD jack)
PKG_CHECK_MODULES(ALSA alsa)
PKG_CHECK_MODULES(MAD mad)
PKG_CHECK_MODULES(ID3TAG id3tag)
PKG_CHECK_MODULES(OGG vorbisfile)
PKG_CHECK_MODULES(SNDFILE sndfile)
PKG_CHECK_MODULES(SAMPLERATE REQUIRED samplerate)

if( JACKD_FOUND )
	ADD_DEFINITIONS(-DHAVE_JACK)
ENDIF( JACKD_FOUND )

if( ALSA_FOUND )
	ADD_DEFINITIONS(-DHAVE_ALSA)
ENDIF( ALSA_FOUND )

if( MAD_FOUND )
	ADD_DEFINITIONS(-DHAVE_MAD)
ENDIF( MAD_FOUND )

if( ID3TAG_FOUND )
	ADD_DEFINITIONS(-DHAVE_ID3TAG)
ENDIF( ID3TAG_FOUND )

if( OGG_FOUND )
	ADD_DEFINITIONS(-DHAVE_OGG)
ENDIF( OGG_FOUND )

if( SNDFILE_FOUND )
        ADD_DEFINITIONS(-DHAVE_SNDFILE)
ENDIF( SNDFILE_FOUND )

ADD_DEFINITIONS(-DENABLE_HWMIXER)

#add definitions, compiler switches, etc.
ADD_DEFINITIONS(-Wall -g)
INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
ADD_SUBDIRECTORY( src )

INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} )
INSTALL( TARGETS ${PROGNAME} DESTINATION bin )
